--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run dev-server\" \"npm run client-start\"",
     "dev-server": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Kevin Hering",
   "license": "MIT",
